# ChangeLog for media-libs/x264
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/x264/ChangeLog,v 1.86 2013/04/16 20:41:17 chutzpah Exp $

  16 Apr 2013; Patrick McLean <chutz@gentoo.org> x264-0.0.20120707.ebuild,
  +files/x264-0.0.20120707-gcc48.patch:
  Add patch from upstream to fix crashes when compiled with gcc 4.8

  04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> x264-0.0.20120707.ebuild:
  revert to ~arm, it was stabilized for a mistake

  04 Feb 2013; Agostino Sarubbo <ago@gentoo.org> x264-0.0.20120707.ebuild:
  Stable for arm, wrt bug #454906

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> x264-0.0.20120707.ebuild:
  Add ~arm, wrt bug #450672

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> x264-0.0.20120707.ebuild:
  Add ~ia64, wrt bug #450672

  02 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> x264-0.0.20120707.ebuild,
  x264-9999.ebuild:
  Missing dev-lang/yasm dependency for amd64-fbsd wrt #455006 by Yuta SATOH

  01 Feb 2013; Agostino Sarubbo <ago@gentoo.org> x264-0.0.20111220.ebuild:
  Stable for ppc, wrt bug #454906

  01 Feb 2013; Agostino Sarubbo <ago@gentoo.org> x264-0.0.20111220.ebuild:
  Stable for ppc64, wrt bug #454906

  16 Dec 2012; Jeroen Roovers <jer@gentoo.org> x264-0.0.20120707.ebuild:
  Marked ~hppa (bug #446582).

  04 Oct 2012; Christoph Junghans <ottxor@gentoo.org> x264-0.0.20120707.ebuild:
  added prefix keywords (bug #351219)

  25 Sep 2012; Mike Frysinger <vapier@gentoo.org> +files/x264-x32.patch,
  x264-0.0.20120707.ebuild:
  Disable asm code for x32 so it at least runs #420241 by Xavier Miller.

  01 Sep 2012; Luca Barbato <lu_zero@gentoo.org> x264-0.0.20120707.ebuild:
  Update to support prefix, fix bug #351219, thanks to the people involved

*x264-0.0.20120707 (08 Jul 2012)

  08 Jul 2012; Luca Barbato <lu_zero@gentoo.org> +x264-0.0.20120707.ebuild:
  version bump

  15 May 2012; Alexis Ballier <aballier@gentoo.org> x264-0.0.20120327.ebuild,