@@ -6,8 +6,8 @@
     <email>media-video@gentoo.org</email>
   </maintainer>
   <use>
-    <flag name="pic">disable optimized assembly code that is not PIC friendly</flag>
-    <flag name="interlaced">enable interlaced encoding support, this can decrease encoding speed by up to 2%</flag>
     <flag name="10bit">Set output bit depth to 10, this may not be compatible with all decoders</flag>
+    <flag name="interlaced">enable interlaced encoding support, this can decrease encoding speed by up to 2%</flag>
+    <flag name="pic">disable optimized assembly code that is not PIC friendly</flag>
   </use>
 </pkgmetadata>
