@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/x264
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/x264/ChangeLog,v 1.86 2013/04/16 20:41:17 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/x264/ChangeLog,v 1.87 2013/06/18 23:01:48 chutzpah Exp $
+
+*x264-0.0.20130506 (18 Jun 2013)
+
+  18 Jun 2013; Patrick McLean <chutz@gentoo.org> -x264-0.0.20110426.ebuild,
+  +x264-0.0.20130506.ebuild, x264-9999.ebuild, metadata.xml:
+  Version bump (bug #473726). Refactor ebuild to be much less verbose, add
+  subslot on soname, use usex rather than myconf. Drop 0.0.20110426 since it
+  uses an old EAPI.
 
   16 Apr 2013; Patrick McLean <chutz@gentoo.org> x264-0.0.20120707.ebuild,
   +files/x264-0.0.20120707-gcc48.patch:
